[package]
name = "rpi-rust-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rpi-led-matrix = { version = "0.4.0", features = ["args", "embeddedgraphics"] }
rpi-led-matrix = { git = "https://github.com/rust-rpi-led-matrix/rust-rpi-rgb-led-matrix", branch = "main", features = ["args", "embeddedgraphics"] }
#embedded-graphics-core = { version = "0.4", optional = true }
embedded-graphics = "0.8"
clap = "3.0"

#[features]
#default = ["embeddedgraphics"]
#embeddedgraphics = ["embedded-graphics-core"]
#args = ["clap"]

# TODO: check https://github.com/rust-rpi-led-matrix/rust-rpi-rgb-led-matrix/blob/main/Cargo.toml
# [profile.release]
